syntax = "proto3";

package io.mystore.shipping.entity;

import "google/protobuf/timestamp.proto";

message OrderState {
  string order_id = 1;
  string customer_id = 2;
  google.protobuf.Timestamp ordered_utc = 3;
  google.protobuf.Timestamp shipped_utc = 4;
  repeated OrderItem order_items = 5;
}

message OrderCreated {
  string order_id = 1;
  string customer_id = 2;
  google.protobuf.Timestamp ordered_utc = 3;
  repeated OrderItem order_items = 4;
}

message OrderShipped {
  string order_id = 1;
  google.protobuf.Timestamp shipped_utc = 2;
}

message OrderReleased { string order_id = 1; }

message OrderItemShipped {
  string order_id = 1;
  string sku_id = 2;
  google.protobuf.Timestamp shipped_utc = 3;
}

message OrderItemReleased {
  string order_id = 1;
  string sku_id = 2;
}

message OrderSkuItemShipped {
  string order_id = 1;
  string order_sku_item_id = 2;
  string sku_id = 3;
  string stock_sku_item_id = 4;
  google.protobuf.Timestamp shipped_utc = 5;
}

message OrderSkuItemReleased {
  string order_id = 1;
  string order_sku_item_id = 2;
  string sku_id = 3;
  string stock_sku_item_id = 4;
}

message OrderItem {
  string sku_id = 1;
  string sku_name = 2;
  int32 quantity = 3;
  google.protobuf.Timestamp shipped_utc = 4;
  repeated OrderSkuItem order_sku_items = 5;
}

message OrderSkuItem {
  string customer_id = 1;
  string order_id = 2;
  string order_sku_item_id = 3;
  string sku_id = 4;
  string sku_name = 5;
  string stock_sku_item_id = 6;
  google.protobuf.Timestamp ordered_utc = 7;
  google.protobuf.Timestamp shipped_utc = 8;
}
